--- a/css/bl-theme-green.css
+++ b/css/bl-theme-green.css
@@ -1,11 +1,11 @@
 /*
  * BL brand / w3css 
  */
-.bl-theme-dark{background-color: #3d5c12!important;;color:white; }          /* dark grey    */ 
-.bl-theme-mid{background-color: #869f33!important;;color:white;}            /* mid grey     */ 
-.bl-theme-light{background-color: #e8e8e7!important;:color:white;}          /* light grey   */ 
-.bl-theme-accent1{background-color: #3d5c12!important;:color:white;}        /* light grey   */ 
-.bl-theme-accent2{background-color: #869f33!important;:color:white;}        /* light grey   */ 
+.bl-theme-dark{background-color: #3d5c12!important;color:white; }          /* dark grey    */ 
+.bl-theme-mid{background-color: #869f33!important;color:white;}            /* mid grey     */ 
+.bl-theme-light{background-color: #e8e8e7!important;color:white;}          /* light grey   */ 
+.bl-theme-accent1{background-color: #3d5c12!important;color:white;}        /* light grey   */ 
+.bl-theme-accent2{background-color: #869f33!important;color:white;}        /* light grey   */ 
 
 .main-page-img {position: absolute; left:0; z-index: -10; min-width: 976px; height: 455px; width: 100%; background-color: white;}
 .main-page-img div {
